--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Say No to CLIMATE CHANGE</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel">
+     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton">
+     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Livvic">
+     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin">
+     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lexend">
     <link rel="stylesheet" href="all.css">
     <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="cc.html">
@@ -15,7 +20,7 @@
     
     <style>
       .title-1 a{
-        color:var(--yellow);
+        color:var(--yellow);n
       }
      
      body{overflow: hidden;
