--- a/cc.html
+++ b/cc.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="all.css">
     <link rel="stylesheet" href="fonts.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Livvic">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lexend">
    <style>
      body{overflow: hidden;
     }
