--- a/cc.html
+++ b/cc.html
@@ -11,9 +11,9 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin_Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Livvic">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lexend">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lexend_Deca">
    <style>
      body{overflow: hidden;
     }
