--- a/cc.html
+++ b/cc.html
@@ -7,7 +7,7 @@
     <title>Say No to CLIMATE CHANGE</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="all.css">
-    <link rel="stylesheet" href="fonts.css">
+  
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel">
@@ -15,6 +15,13 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Livvic">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lexend_Deca">
    <style>
+       
+        /*      theme font-family   */
+    --Abel: 'Abel', cursive;
+    --Anton: 'Anton', cursive;
+    --Josefin : 'Josefin', cursive;
+    --Lexend: 'Lexend', cursive;
+    --Livvic : 'Livvic', cursive;
      body{overflow: hidden;
     }
 .news{
