--- a/plant.html
+++ b/plant.html
@@ -7,6 +7,11 @@
 <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="all.css">
     <link rel="stylesheet" href="fonts.css">
+   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=JosefinSans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Livvic">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=LexendDeca">
     <style>
       body{overflow: hidden;
      }
