--- a/plant.html
+++ b/plant.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="fonts.css">
    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=JosefinSans">
+    <link rel="stylesheet" href="https://drive.google.com/drive/folders/1ObywOWmPWOYHmf90cVFRhSacsExLlxGd">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Livvic">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=LexendDeca">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
