--- a/cc.html
+++ b/cc.html
@@ -592,3 +592,5 @@ display: inline-block;
     }
     document.addEventListener("click", closeSubmenu, false);
     </script>       
+</body>
+</html>
