--- a/cc.html
+++ b/cc.html
@@ -12,7 +12,8 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
    <style>
-       body{overflow: hidden;}
+           body{overflow: hidden;
+    }
    
 .news{
   font-size:50px;
