--- a/cc.html
+++ b/cc.html
@@ -5,15 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Say No to CLIMATE CHANGE</title>
-     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="fonts.css"
-   
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="all.css">
-  
+    <link rel="stylesheet" href="fonts.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
    <style>
-           body{overflow: hidden;
+     body{overflow: hidden;
     }
    
 .news{
