--- a/cc.html
+++ b/cc.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Livvic">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lexend_Deca">
+    <link rel="stylesheet" href=" Livvic-Regular.ttf">
    <style>
      body{overflow: hidden;
     }
