--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Say No to CLIMATE CHANGE</title>
     <link rel="stylesheet" href="style.css">
- 
+   <link rel="stylesheet" href=" Livvic-Regular.ttf">
     <link rel="stylesheet" href="all.css">
     <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="cc.html">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     
     <style>
