--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Say No to CLIMATE CHANGE</title>
     <link rel="stylesheet" href="style.css">
-   <link rel="stylesheet" href=" Livvic-Regular.ttf">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Livvic">
+    <link rel="stylesheet" href=" Livvic-Regular.ttf"
     <link rel="stylesheet" href="all.css">
     <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="cc.html">
